# 5a

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: agent_api.md
mlruns/0/: meta.yaml
src/core/: agent.py  config.py  memory.py  observability.py  utils.py
src/core/memory/: base.py  config.py  memory.py
src/core/observability/: mlflow.py
src/core/signatures/: memory_qa.py
